@@ -326,6 +326,7 @@ namespace libtorrent
 				, boost::uint32_t flags) const;
 			void refresh_torrent_status(std::vector<torrent_status>* ret
 				, boost::uint32_t flags) const;
+			void post_torrent_updates();
 
 			std::vector<torrent_handle> get_torrents() const;
 			
@@ -1061,6 +1062,10 @@ namespace libtorrent
 			size_type m_total_redundant_bytes;
 
 			std::vector<boost::shared_ptr<feed> > m_feeds;
+
+			// this is the set of (subscribed) torrents that have changed
+			// their states since the last time the user requested updates.
+			std::vector<boost::weak_ptr<torrent> > m_state_updates;
 
 			// the main working thread
 			boost::scoped_ptr<thread> m_thread;
