@@ -1,3 +1,4 @@
+	* introduced a more scalable API for torrent status updates (post_torrent_updates())
 	* updated the API to add_torrent_params turning all bools into flags of a flags field
 	* added async_add_torrent() function to significantly improve performance when
 	  adding many torrents
